force-app/main/default/objects/Canvas_Settings__c/Canvas_Settings__c.object-meta.xml
<CustomObject>
    <label>Canvas Settings</label>
    <nameField>
        <label>Canvas Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Canvas Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>