force-app/main/default/objects/Canvas_Settings__c/fields/API_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>API_Client_ID__c</fullName>
    <label>API Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>