force-app/main/default/objects/Canvas_Settings__c/fields/API_Root_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Root_Endpoint__c</fullName>
    <label>API Root Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>