force-app/main/default/objects/Canvas_Settings__c/fields/Canvas_Install_URL__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Install_URL__c</fullName>
    <label>Canvas Install URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>