force-app/main/default/objects/Canvas_Settings__c/fields/DefaultUserName__c.field-meta.xml
<CustomField>
    <fullName>DefaultUserName__c</fullName>
    <description>This is the User Name field on Canvas User record:  (Example:  CU-000006)</description>
    <label>DefaultUserName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>