force-app/main/default/objects/Canvas_Settings__c/fields/Developer_Key__c.field-meta.xml
<CustomField>
    <fullName>Developer_Key__c</fullName>
    <label>Developer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>