force-app/main/default/objects/Canvas_Settings__c/fields/OAuth_URL__c.field-meta.xml
<CustomField>
    <fullName>OAuth_URL__c</fullName>
    <label>OAuth URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>