force-app/main/default/objects/Canvas_Settings__c/fields/Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URL__c</fullName>
    <label>Redirect URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>